--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-plugin-template",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "Template to create a plugin for Obsidian (https://obsidian.md)",
 	"main": "main.js",
 	"scripts": {
+    "preinstall": "npx only-allow pnpm",
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
@@ -13,12 +14,25 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+    "globals" : "16.4.0",
+    "eslint": "9.38.0",
+    "@eslint/js": "9.38.0",
+    "eslint-plugin-import": "2.32.0",
+    "typescript-eslint": "8.44.1",
+    "@typescript-eslint/eslint-plugin": "8.44.1",
+    "@typescript-eslint/parser": "8.44.1",
+		"typescript": "5.9.2",
+		"tslib": "2.8.1",
 		"obsidian": "latest",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+    "@codemirror/autocomplete": "6.19.0",
+    "@codemirror/collab" : "6.1.1",
+    "@codemirror/language": "6.11.3",
+    "@codemirror/lint" : "6.9.0",
+    "@codemirror/search" : "6.5.11",
+    "@codemirror/state": "6.5.0",
+    "@codemirror/text" : "0.19.6",
+    "@codemirror/view": "6.38.1"
 	}
 }
