--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "main.js",
 	"type": "module",
 	"scripts": {
-    "preinstall": "npx only-allow pnpm",
+		"preinstall": "npx only-allow pnpm",
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
@@ -14,15 +14,26 @@
 	"keywords": [],
 	"license": "0-BSD",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
+		"@codemirror/autocomplete": "6.19.0",
+		"@codemirror/collab": "6.1.1",
+		"@codemirror/language": "6.11.3",
+		"@codemirror/lint": "6.9.0",
+		"@codemirror/search": "6.5.11",
+		"@codemirror/state": "6.5.0",
+		"@codemirror/text": "0.19.6",
+		"@codemirror/view": "6.38.1",
+    "@types/codemirror" : "5.60.17",
+		"@types/node": "22.13.14",
+    "builtin-modules": "5.0.0",
 		"esbuild": "0.25.5",
-		"eslint-plugin-obsidianmd": "0.1.9",
-		"globals": "14.0.0",
-		"tslib": "2.4.0",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "8.35.1",
+    "eslint": "9.38.0",
 		"@eslint/js": "9.30.1",
-		"jiti": "2.6.1"
+		"eslint-plugin-obsidianmd": "0.1.9",
+		"globals": "16.5.0",
+		"jiti": "2.6.1",
+		"tslib": "2.8.1",
+		"typescript": "5.9.2",
+		"typescript-eslint": "8.49.0"
 	},
 	"dependencies": {
 		"obsidian": "latest"
