--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
 	"name": "obsidian-plugin-template",
 	"version": "1.0.0",
+  "author": "fronglemog",
 	"description": "Template to create a plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
+  "keywords": [],
+  "license": "MIT",
+  "packageManager": "pnpm@10.26.1",
+	"main": "plugin/main.js",
 	"type": "module",
 	"scripts": {
 		"preinstall": "npx only-allow pnpm",
@@ -11,8 +15,6 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"lint": "eslint ."
 	},
-	"keywords": [],
-	"license": "0-BSD",
 	"devDependencies": {
 		"@codemirror/autocomplete": "6.19.0",
 		"@codemirror/collab": "6.1.1",
@@ -22,18 +24,18 @@
 		"@codemirror/state": "6.5.0",
 		"@codemirror/text": "0.19.6",
 		"@codemirror/view": "6.38.1",
-    "@types/codemirror" : "5.60.17",
+		"@types/codemirror": "5.60.17",
 		"@types/node": "22.13.14",
-    "builtin-modules": "5.0.0",
 		"esbuild": "0.25.5",
-    "eslint": "9.38.0",
-		"@eslint/js": "9.30.1",
+		"eslint": "9.38.0",
+		"@eslint/js": "9.38.0",
+		"eslint-plugin-import-x": "4.16.1",
 		"eslint-plugin-obsidianmd": "0.1.9",
-		"globals": "16.5.0",
-		"jiti": "2.6.1",
 		"tslib": "2.8.1",
 		"typescript": "5.9.2",
-		"typescript-eslint": "8.49.0"
+		"typescript-eslint": "8.49.0",
+		"globals": "16.5.0",
+		"obsidian": "latest"
 	},
 	"dependencies": {
 		"obsidian": "latest"
